fix: stop hiding overflow on the y axis
fixes #1

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -50,13 +50,12 @@ body {
   height: 100vh;
   font-family: "Inter", serif;
   background-color: var(--bg-primary);
-  overflow-x: hidden;
   color: var(--text-secondary);
-  
+  overflow-x: hidden;
+
   @media only screen and (max-width: 800px) {
     width: 100%;
     height: 100%;
-    overflow: hidden;
   }
 }
 
